# AiMigration

./: .gitignore  Directory.Build.props  FUNCTIONALITY_BUSINESS_LOGIC_REPORT.md  Q3.MigrationAgent.sln  README.md  codex_raw_output.txt  migrate.config.example.json  pyproject.toml
ai_migration_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
migration_agent/: __main__.py
migration_agent/adapters/: __init__.py  angular.py  base.py  dotnet.py  package_classifier.py
migration_agent/ai/: codex.py  provider.py
migration_agent/cli/: args.py
migration_agent/core/: agent.py  analyser.py  commands.py  copy_ignore.py  executor.py  planner.py  progress.py  reporter.py  rollback.py  run_log.py  timing.py  validator.py
src/Q3.MigrationAgent.Adapters/: AdapterRegistry.cs  Q3.MigrationAgent.Adapters.csproj
src/Q3.MigrationAgent.Api/: Program.cs  Q3.MigrationAgent.Api.csproj  Q3.MigrationAgent.Api.http
src/Q3.MigrationAgent.Business/: Q3.MigrationAgent.Business.csproj
src/Q3.MigrationAgent.Cli/: Program.cs  Q3.MigrationAgent.Cli.csproj
src/Q3.MigrationAgent.Core/: Q3.MigrationAgent.Core.csproj
src/Q3.MigrationAgent.Rules/: Q3.MigrationAgent.Rules.csproj
src/Q3.MigrationAgent.Tests/: AiProviderResolverTests.cs  AngularAdapterTests.cs  CommandRunnerTests.cs  ConfigLoaderTests.cs  DotNetAdapterTests.cs  MigrationSafetyTests.cs  Q3.MigrationAgent.Tests.csproj  (+1 more)
tests/: test_adapters.py  test_ai_cli.py  test_angular_adapter.py  test_commands.py  test_config_defaults.py  test_copy_ignore.py  test_package_classifier.py  test_planner.py
(+44 files in other folders)
