[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-migration-agent"
version = "0.1.0"
description = "Adapter-based AI-assisted code migration agent"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
migration-agent = "migration_agent.__main__:main"

[tool.setuptools.packages.find]
include = ["migration_agent*"]

[tool.setuptools.package-data]
migration_agent = ["rules/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
